sql/hive/src/test/resources/ql/src/test/queries/positive/groupby6.q
FROM src
SELECT DISTINCT substr(src.value,5,1)
