sql/hive/src/test/resources/ql/src/test/queries/negative/invalid_function_param2.q
FROM src
INSERT OVERWRITE TABLE dest1 SELECT substr('1234', 'abc'), src.value WHERE src.key < 100
